// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Roles can be created/edited/deleted: can be created 1`] = `
Object {
  "data": Object {
    "createUserRole": Object {
      "description": "New Role",
      "id": Any<String>,
      "name": "Role2",
      "permissions": Array [
        Object {
          "deprecated": false,
          "description": "Allows to take an action on comment",
          "id": "CAN_TAKE_COMMENT_ACTION",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create navigation",
          "id": "CAN_CREATE_NAVIGATION",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get navigation",
          "id": "CAN_GET_NAVIGATION",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all navigations",
          "id": "CAN_GET_NAVIGATIONS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete navigations",
          "id": "CAN_DELETE_NAVIGATION",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create authors",
          "id": "CAN_CREATE_AUTHOR",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get author",
          "id": "CAN_GET_AUTHOR",
        },
        Object {
          "deprecated": false,
          "description": "Allows to all authors",
          "id": "CAN_GET_AUTHORS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete authors",
          "id": "CAN_DELETE_AUTHORS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create images",
          "id": "CAN_CREATE_IMAGE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get image",
          "id": "CAN_GET_IMAGE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all images",
          "id": "CAN_GET_IMAGES",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete images",
          "id": "CAN_DELETE_IMAGE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create articles",
          "id": "CAN_CREATE_ARTICLE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get article",
          "id": "CAN_GET_ARTICLE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all articles",
          "id": "CAN_GET_ARTICLES",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete articles",
          "id": "CAN_DELETE_ARTICLE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get preview links for articles",
          "id": "CAN_GET_ARTICLE_PREVIEW_LINK",
        },
        Object {
          "deprecated": false,
          "description": "Allows to publish articles",
          "id": "CAN_PUBLISH_ARTICLE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get peer article",
          "id": "CAN_GET_PEER_ARTICLE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all peer articles",
          "id": "CAN_GET_PEER_ARTICLES",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create Pages",
          "id": "CAN_CREATE_PAGE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get Page",
          "id": "CAN_GET_PAGE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all Pages",
          "id": "CAN_GET_PAGES",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete Pages",
          "id": "CAN_DELETE_PAGE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to publish Pages",
          "id": "CAN_PUBLISH_PAGE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get preview links for pages",
          "id": "CAN_GET_PAGE_PREVIEW_LINK",
        },
        Object {
          "deprecated": false,
          "description": "Allows to update peer profile",
          "id": "CAN_UPDATE_PEER_PROFILE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get peer profile",
          "id": "CAN_GET_PEER_PROFILE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create peers",
          "id": "CAN_CREATE_PEER",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get peer",
          "id": "CAN_GET_PEER",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all peers",
          "id": "CAN_GET_PEERS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete peers",
          "id": "CAN_DELETE_PEER",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create tokens",
          "id": "CAN_CREATE_TOKEN",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete tokens",
          "id": "CAN_DELETE_TOKEN",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all tokens",
          "id": "CAN_GET_TOKENS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete tokens",
          "id": "CAN_DELETE_TOKEN",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create an user",
          "id": "CAN_CREATE_USER",
        },
        Object {
          "deprecated": false,
          "description": "Allows to reset the password of an user",
          "id": "CAN_RESET_USER_PASSWORD",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get an user",
          "id": "CAN_GET_USER",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all users",
          "id": "CAN_GET_USERS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete users",
          "id": "CAN_DELETE_USER",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create an user role",
          "id": "CAN_CREATE_USER_ROLE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get an user role",
          "id": "CAN_GET_USER_ROLE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all user roles",
          "id": "CAN_GET_USER_ROLES",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete user role",
          "id": "CAN_DELETE_USER_ROLE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get a permission",
          "id": "CAN_GET_PERMISSION",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all permissions",
          "id": "CAN_GET_PERMISSIONS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all comments",
          "id": "CAN_GET_COMMENTS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create a member plan",
          "id": "CAN_CREATE_MEMBER_PLAN",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get a member plan",
          "id": "CAN_GET_MEMBER_PLAN",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all member plans",
          "id": "CAN_GET_MEMBER_PLANS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete member plan",
          "id": "CAN_DELETE_MEMBER_PLAN",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create a payment method",
          "id": "CAN_CREATE_PAYMENT_METHOD",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get a payment method",
          "id": "CAN_GET_PAYMENT_METHOD",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all payment methods",
          "id": "CAN_GET_PAYMENT_METHODS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete payment method",
          "id": "CAN_DELETE_PAYMENT_METHOD",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create an invoice",
          "id": "CAN_CREATE_INVOICE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get an invoice",
          "id": "CAN_GET_INVOICE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all invoices",
          "id": "CAN_GET_INVOICES",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete invoice",
          "id": "CAN_DELETE_INVOICE",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create a payment",
          "id": "CAN_CREATE_PAYMENT",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get an payment",
          "id": "CAN_GET_PAYMENT",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all payments",
          "id": "CAN_GET_PAYMENTS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all payment providers",
          "id": "CAN_GET_PAYMENT_PROVIDERS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to send a JWT Login",
          "id": "CAN_SEND_JWT_LOGIN",
        },
        Object {
          "deprecated": false,
          "description": "Allows to login editor",
          "id": "CAN_LOGIN_EDITOR",
        },
        Object {
          "deprecated": false,
          "description": "Allows to create a subscription",
          "id": "CAN_CREATE_SUBSCRIPTION",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get a subscription",
          "id": "CAN_GET_SUBSCRIPTION",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all subscriptions",
          "id": "CAN_GET_SUBSCRIPTIONS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to delete a subscription",
          "id": "CAN_DELETE_SUBSCRIPTION",
        },
        Object {
          "deprecated": false,
          "description": "Allows to login as other user",
          "id": "CAN_LOGIN_AS_OTHER_USER",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all settings",
          "id": "CAN_GET_SETTINGS",
        },
        Object {
          "deprecated": false,
          "description": "Allows to update settings",
          "id": "CAN_UPDATE_SETTINGS",
        },
      ],
      "systemRole": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`User Roles can be created/edited/deleted: can be deleted 1`] = `
Object {
  "data": Object {
    "deleteUserRole": Any<String>,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`User Roles can be created/edited/deleted: can be read by id 1`] = `
Object {
  "data": Object {
    "userRole": Object {
      "description": "User Role",
      "id": Any<String>,
      "name": "Role4",
      "permissions": Array [],
      "systemRole": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`User Roles can be created/edited/deleted: can be read in list 1`] = `
Object {
  "data": Object {
    "userRoles": Object {
      "nodes": Array [
        Object {
          "description": "User Role",
          "id": Any<String>,
          "name": "Role3",
          "permissions": Array [],
          "systemRole": false,
        },
        Object {
          "description": "New Role",
          "id": Any<String>,
          "name": "Role2",
          "permissions": Array [
            Object {
              "deprecated": false,
              "description": "Allows to take an action on comment",
              "id": "CAN_TAKE_COMMENT_ACTION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create navigation",
              "id": "CAN_CREATE_NAVIGATION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get navigation",
              "id": "CAN_GET_NAVIGATION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all navigations",
              "id": "CAN_GET_NAVIGATIONS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete navigations",
              "id": "CAN_DELETE_NAVIGATION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create authors",
              "id": "CAN_CREATE_AUTHOR",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get author",
              "id": "CAN_GET_AUTHOR",
            },
            Object {
              "deprecated": false,
              "description": "Allows to all authors",
              "id": "CAN_GET_AUTHORS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete authors",
              "id": "CAN_DELETE_AUTHORS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create images",
              "id": "CAN_CREATE_IMAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get image",
              "id": "CAN_GET_IMAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all images",
              "id": "CAN_GET_IMAGES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete images",
              "id": "CAN_DELETE_IMAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create articles",
              "id": "CAN_CREATE_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get article",
              "id": "CAN_GET_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all articles",
              "id": "CAN_GET_ARTICLES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete articles",
              "id": "CAN_DELETE_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get preview links for articles",
              "id": "CAN_GET_ARTICLE_PREVIEW_LINK",
            },
            Object {
              "deprecated": false,
              "description": "Allows to publish articles",
              "id": "CAN_PUBLISH_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get peer article",
              "id": "CAN_GET_PEER_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all peer articles",
              "id": "CAN_GET_PEER_ARTICLES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create Pages",
              "id": "CAN_CREATE_PAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get Page",
              "id": "CAN_GET_PAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all Pages",
              "id": "CAN_GET_PAGES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete Pages",
              "id": "CAN_DELETE_PAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to publish Pages",
              "id": "CAN_PUBLISH_PAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get preview links for pages",
              "id": "CAN_GET_PAGE_PREVIEW_LINK",
            },
            Object {
              "deprecated": false,
              "description": "Allows to update peer profile",
              "id": "CAN_UPDATE_PEER_PROFILE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get peer profile",
              "id": "CAN_GET_PEER_PROFILE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create peers",
              "id": "CAN_CREATE_PEER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get peer",
              "id": "CAN_GET_PEER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all peers",
              "id": "CAN_GET_PEERS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete peers",
              "id": "CAN_DELETE_PEER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create tokens",
              "id": "CAN_CREATE_TOKEN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete tokens",
              "id": "CAN_DELETE_TOKEN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all tokens",
              "id": "CAN_GET_TOKENS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete tokens",
              "id": "CAN_DELETE_TOKEN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create an user",
              "id": "CAN_CREATE_USER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to reset the password of an user",
              "id": "CAN_RESET_USER_PASSWORD",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get an user",
              "id": "CAN_GET_USER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all users",
              "id": "CAN_GET_USERS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete users",
              "id": "CAN_DELETE_USER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create an user role",
              "id": "CAN_CREATE_USER_ROLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get an user role",
              "id": "CAN_GET_USER_ROLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all user roles",
              "id": "CAN_GET_USER_ROLES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete user role",
              "id": "CAN_DELETE_USER_ROLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get a permission",
              "id": "CAN_GET_PERMISSION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all permissions",
              "id": "CAN_GET_PERMISSIONS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all comments",
              "id": "CAN_GET_COMMENTS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create a member plan",
              "id": "CAN_CREATE_MEMBER_PLAN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get a member plan",
              "id": "CAN_GET_MEMBER_PLAN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all member plans",
              "id": "CAN_GET_MEMBER_PLANS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete member plan",
              "id": "CAN_DELETE_MEMBER_PLAN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create a payment method",
              "id": "CAN_CREATE_PAYMENT_METHOD",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get a payment method",
              "id": "CAN_GET_PAYMENT_METHOD",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all payment methods",
              "id": "CAN_GET_PAYMENT_METHODS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete payment method",
              "id": "CAN_DELETE_PAYMENT_METHOD",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create an invoice",
              "id": "CAN_CREATE_INVOICE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get an invoice",
              "id": "CAN_GET_INVOICE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all invoices",
              "id": "CAN_GET_INVOICES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete invoice",
              "id": "CAN_DELETE_INVOICE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create a payment",
              "id": "CAN_CREATE_PAYMENT",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get an payment",
              "id": "CAN_GET_PAYMENT",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all payments",
              "id": "CAN_GET_PAYMENTS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all payment providers",
              "id": "CAN_GET_PAYMENT_PROVIDERS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to send a JWT Login",
              "id": "CAN_SEND_JWT_LOGIN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to login editor",
              "id": "CAN_LOGIN_EDITOR",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create a subscription",
              "id": "CAN_CREATE_SUBSCRIPTION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get a subscription",
              "id": "CAN_GET_SUBSCRIPTION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all subscriptions",
              "id": "CAN_GET_SUBSCRIPTIONS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete a subscription",
              "id": "CAN_DELETE_SUBSCRIPTION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to login as other user",
              "id": "CAN_LOGIN_AS_OTHER_USER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all settings",
              "id": "CAN_GET_SETTINGS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to update settings",
              "id": "CAN_UPDATE_SETTINGS",
            },
          ],
          "systemRole": false,
        },
        Object {
          "description": "User Role",
          "id": Any<String>,
          "name": "Role1",
          "permissions": Array [],
          "systemRole": false,
        },
        Object {
          "description": "User Role",
          "id": Any<String>,
          "name": "Role0",
          "permissions": Array [],
          "systemRole": false,
        },
        Object {
          "description": "Peer Role",
          "id": Any<String>,
          "name": "Peer",
          "permissions": Array [
            Object {
              "deprecated": false,
              "description": "Allows to get peer profile",
              "id": "CAN_GET_PEER_PROFILE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get shared article",
              "id": "CAN_GET_SHARED_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get shared articles",
              "id": "CAN_GET_SHARED_ARTICLES",
            },
          ],
          "systemRole": true,
        },
        Object {
          "description": "Editor Role",
          "id": Any<String>,
          "name": "Editor",
          "permissions": Array [
            Object {
              "deprecated": false,
              "description": "Allows to get all comments",
              "id": "CAN_GET_COMMENTS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to take an action on comment",
              "id": "CAN_TAKE_COMMENT_ACTION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create authors",
              "id": "CAN_CREATE_AUTHOR",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get author",
              "id": "CAN_GET_AUTHOR",
            },
            Object {
              "deprecated": false,
              "description": "Allows to all authors",
              "id": "CAN_GET_AUTHORS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create images",
              "id": "CAN_CREATE_IMAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get image",
              "id": "CAN_GET_IMAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all images",
              "id": "CAN_GET_IMAGES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create articles",
              "id": "CAN_CREATE_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get article",
              "id": "CAN_GET_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all articles",
              "id": "CAN_GET_ARTICLES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to publish articles",
              "id": "CAN_PUBLISH_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get preview links for articles",
              "id": "CAN_GET_ARTICLE_PREVIEW_LINK",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create Pages",
              "id": "CAN_CREATE_PAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get Page",
              "id": "CAN_GET_PAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all Pages",
              "id": "CAN_GET_PAGES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to publish Pages",
              "id": "CAN_PUBLISH_PAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get peer",
              "id": "CAN_GET_PEER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all peers",
              "id": "CAN_GET_PEERS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to login editor",
              "id": "CAN_LOGIN_EDITOR",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all settings",
              "id": "CAN_GET_SETTINGS",
            },
          ],
          "systemRole": true,
        },
        Object {
          "description": "Administrator Role",
          "id": Any<String>,
          "name": "Admin",
          "permissions": Array [
            Object {
              "deprecated": false,
              "description": "Allows to take an action on comment",
              "id": "CAN_TAKE_COMMENT_ACTION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create navigation",
              "id": "CAN_CREATE_NAVIGATION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get navigation",
              "id": "CAN_GET_NAVIGATION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all navigations",
              "id": "CAN_GET_NAVIGATIONS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete navigations",
              "id": "CAN_DELETE_NAVIGATION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create authors",
              "id": "CAN_CREATE_AUTHOR",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get author",
              "id": "CAN_GET_AUTHOR",
            },
            Object {
              "deprecated": false,
              "description": "Allows to all authors",
              "id": "CAN_GET_AUTHORS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete authors",
              "id": "CAN_DELETE_AUTHORS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create images",
              "id": "CAN_CREATE_IMAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get image",
              "id": "CAN_GET_IMAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all images",
              "id": "CAN_GET_IMAGES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete images",
              "id": "CAN_DELETE_IMAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create articles",
              "id": "CAN_CREATE_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get article",
              "id": "CAN_GET_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all articles",
              "id": "CAN_GET_ARTICLES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete articles",
              "id": "CAN_DELETE_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get preview links for articles",
              "id": "CAN_GET_ARTICLE_PREVIEW_LINK",
            },
            Object {
              "deprecated": false,
              "description": "Allows to publish articles",
              "id": "CAN_PUBLISH_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get peer article",
              "id": "CAN_GET_PEER_ARTICLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all peer articles",
              "id": "CAN_GET_PEER_ARTICLES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create Pages",
              "id": "CAN_CREATE_PAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get Page",
              "id": "CAN_GET_PAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all Pages",
              "id": "CAN_GET_PAGES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete Pages",
              "id": "CAN_DELETE_PAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to publish Pages",
              "id": "CAN_PUBLISH_PAGE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get preview links for pages",
              "id": "CAN_GET_PAGE_PREVIEW_LINK",
            },
            Object {
              "deprecated": false,
              "description": "Allows to update peer profile",
              "id": "CAN_UPDATE_PEER_PROFILE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get peer profile",
              "id": "CAN_GET_PEER_PROFILE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create peers",
              "id": "CAN_CREATE_PEER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get peer",
              "id": "CAN_GET_PEER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all peers",
              "id": "CAN_GET_PEERS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete peers",
              "id": "CAN_DELETE_PEER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create tokens",
              "id": "CAN_CREATE_TOKEN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete tokens",
              "id": "CAN_DELETE_TOKEN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all tokens",
              "id": "CAN_GET_TOKENS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete tokens",
              "id": "CAN_DELETE_TOKEN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create an user",
              "id": "CAN_CREATE_USER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to reset the password of an user",
              "id": "CAN_RESET_USER_PASSWORD",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get an user",
              "id": "CAN_GET_USER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all users",
              "id": "CAN_GET_USERS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete users",
              "id": "CAN_DELETE_USER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create an user role",
              "id": "CAN_CREATE_USER_ROLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get an user role",
              "id": "CAN_GET_USER_ROLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all user roles",
              "id": "CAN_GET_USER_ROLES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete user role",
              "id": "CAN_DELETE_USER_ROLE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get a permission",
              "id": "CAN_GET_PERMISSION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all permissions",
              "id": "CAN_GET_PERMISSIONS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all comments",
              "id": "CAN_GET_COMMENTS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create a member plan",
              "id": "CAN_CREATE_MEMBER_PLAN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get a member plan",
              "id": "CAN_GET_MEMBER_PLAN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all member plans",
              "id": "CAN_GET_MEMBER_PLANS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete member plan",
              "id": "CAN_DELETE_MEMBER_PLAN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create a payment method",
              "id": "CAN_CREATE_PAYMENT_METHOD",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get a payment method",
              "id": "CAN_GET_PAYMENT_METHOD",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all payment methods",
              "id": "CAN_GET_PAYMENT_METHODS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete payment method",
              "id": "CAN_DELETE_PAYMENT_METHOD",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create an invoice",
              "id": "CAN_CREATE_INVOICE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get an invoice",
              "id": "CAN_GET_INVOICE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all invoices",
              "id": "CAN_GET_INVOICES",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete invoice",
              "id": "CAN_DELETE_INVOICE",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create a payment",
              "id": "CAN_CREATE_PAYMENT",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get an payment",
              "id": "CAN_GET_PAYMENT",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all payments",
              "id": "CAN_GET_PAYMENTS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all payment providers",
              "id": "CAN_GET_PAYMENT_PROVIDERS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to send a JWT Login",
              "id": "CAN_SEND_JWT_LOGIN",
            },
            Object {
              "deprecated": false,
              "description": "Allows to login editor",
              "id": "CAN_LOGIN_EDITOR",
            },
            Object {
              "deprecated": false,
              "description": "Allows to create a subscription",
              "id": "CAN_CREATE_SUBSCRIPTION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get a subscription",
              "id": "CAN_GET_SUBSCRIPTION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all subscriptions",
              "id": "CAN_GET_SUBSCRIPTIONS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to delete a subscription",
              "id": "CAN_DELETE_SUBSCRIPTION",
            },
            Object {
              "deprecated": false,
              "description": "Allows to login as other user",
              "id": "CAN_LOGIN_AS_OTHER_USER",
            },
            Object {
              "deprecated": false,
              "description": "Allows to get all settings",
              "id": "CAN_GET_SETTINGS",
            },
            Object {
              "deprecated": false,
              "description": "Allows to update settings",
              "id": "CAN_UPDATE_SETTINGS",
            },
          ],
          "systemRole": true,
        },
      ],
      "pageInfo": Object {
        "endCursor": Any<String>,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": Any<String>,
      },
      "totalCount": Any<Number>,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`User Roles can be created/edited/deleted: can be updated 1`] = `
Object {
  "data": Object {
    "updateUserRole": Object {
      "description": "Updated Role",
      "id": Any<String>,
      "name": "UpdatedRole",
      "permissions": Array [
        Object {
          "deprecated": false,
          "description": "Allows to take an action on comment",
          "id": "CAN_TAKE_COMMENT_ACTION",
        },
        Object {
          "deprecated": false,
          "description": "Allows to get all navigations",
          "id": "CAN_GET_NAVIGATIONS",
        },
      ],
      "systemRole": false,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`User Roles can be created/edited/deleted: can read permission list 1`] = `
Object {
  "data": Object {
    "permissions": Array [
      Object {
        "deprecated": false,
        "description": "Allows to take an action on comment",
        "id": "CAN_TAKE_COMMENT_ACTION",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create navigation",
        "id": "CAN_CREATE_NAVIGATION",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get navigation",
        "id": "CAN_GET_NAVIGATION",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all navigations",
        "id": "CAN_GET_NAVIGATIONS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete navigations",
        "id": "CAN_DELETE_NAVIGATION",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create authors",
        "id": "CAN_CREATE_AUTHOR",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get author",
        "id": "CAN_GET_AUTHOR",
      },
      Object {
        "deprecated": false,
        "description": "Allows to all authors",
        "id": "CAN_GET_AUTHORS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete authors",
        "id": "CAN_DELETE_AUTHORS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create images",
        "id": "CAN_CREATE_IMAGE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get image",
        "id": "CAN_GET_IMAGE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all images",
        "id": "CAN_GET_IMAGES",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete images",
        "id": "CAN_DELETE_IMAGE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create articles",
        "id": "CAN_CREATE_ARTICLE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get article",
        "id": "CAN_GET_ARTICLE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all articles",
        "id": "CAN_GET_ARTICLES",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete articles",
        "id": "CAN_DELETE_ARTICLE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get preview links for articles",
        "id": "CAN_GET_ARTICLE_PREVIEW_LINK",
      },
      Object {
        "deprecated": false,
        "description": "Allows to publish articles",
        "id": "CAN_PUBLISH_ARTICLE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get peer article",
        "id": "CAN_GET_PEER_ARTICLE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all peer articles",
        "id": "CAN_GET_PEER_ARTICLES",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create Pages",
        "id": "CAN_CREATE_PAGE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get Page",
        "id": "CAN_GET_PAGE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all Pages",
        "id": "CAN_GET_PAGES",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete Pages",
        "id": "CAN_DELETE_PAGE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to publish Pages",
        "id": "CAN_PUBLISH_PAGE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get preview links for pages",
        "id": "CAN_GET_PAGE_PREVIEW_LINK",
      },
      Object {
        "deprecated": false,
        "description": "Allows to update peer profile",
        "id": "CAN_UPDATE_PEER_PROFILE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get peer profile",
        "id": "CAN_GET_PEER_PROFILE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create peers",
        "id": "CAN_CREATE_PEER",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get peer",
        "id": "CAN_GET_PEER",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all peers",
        "id": "CAN_GET_PEERS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete peers",
        "id": "CAN_DELETE_PEER",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create tokens",
        "id": "CAN_CREATE_TOKEN",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete tokens",
        "id": "CAN_DELETE_TOKEN",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all tokens",
        "id": "CAN_GET_TOKENS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete tokens",
        "id": "CAN_DELETE_TOKEN",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create an user",
        "id": "CAN_CREATE_USER",
      },
      Object {
        "deprecated": false,
        "description": "Allows to reset the password of an user",
        "id": "CAN_RESET_USER_PASSWORD",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get an user",
        "id": "CAN_GET_USER",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all users",
        "id": "CAN_GET_USERS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete users",
        "id": "CAN_DELETE_USER",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create an user role",
        "id": "CAN_CREATE_USER_ROLE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get an user role",
        "id": "CAN_GET_USER_ROLE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all user roles",
        "id": "CAN_GET_USER_ROLES",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete user role",
        "id": "CAN_DELETE_USER_ROLE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get a permission",
        "id": "CAN_GET_PERMISSION",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all permissions",
        "id": "CAN_GET_PERMISSIONS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all comments",
        "id": "CAN_GET_COMMENTS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create a member plan",
        "id": "CAN_CREATE_MEMBER_PLAN",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get a member plan",
        "id": "CAN_GET_MEMBER_PLAN",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all member plans",
        "id": "CAN_GET_MEMBER_PLANS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete member plan",
        "id": "CAN_DELETE_MEMBER_PLAN",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create a payment method",
        "id": "CAN_CREATE_PAYMENT_METHOD",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get a payment method",
        "id": "CAN_GET_PAYMENT_METHOD",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all payment methods",
        "id": "CAN_GET_PAYMENT_METHODS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete payment method",
        "id": "CAN_DELETE_PAYMENT_METHOD",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create an invoice",
        "id": "CAN_CREATE_INVOICE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get an invoice",
        "id": "CAN_GET_INVOICE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all invoices",
        "id": "CAN_GET_INVOICES",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete invoice",
        "id": "CAN_DELETE_INVOICE",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create a payment",
        "id": "CAN_CREATE_PAYMENT",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get an payment",
        "id": "CAN_GET_PAYMENT",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all payments",
        "id": "CAN_GET_PAYMENTS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all payment providers",
        "id": "CAN_GET_PAYMENT_PROVIDERS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to send a JWT Login",
        "id": "CAN_SEND_JWT_LOGIN",
      },
      Object {
        "deprecated": false,
        "description": "Allows to login editor",
        "id": "CAN_LOGIN_EDITOR",
      },
      Object {
        "deprecated": false,
        "description": "Allows to create a subscription",
        "id": "CAN_CREATE_SUBSCRIPTION",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get a subscription",
        "id": "CAN_GET_SUBSCRIPTION",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all subscriptions",
        "id": "CAN_GET_SUBSCRIPTIONS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to delete a subscription",
        "id": "CAN_DELETE_SUBSCRIPTION",
      },
      Object {
        "deprecated": false,
        "description": "Allows to login as other user",
        "id": "CAN_LOGIN_AS_OTHER_USER",
      },
      Object {
        "deprecated": false,
        "description": "Allows to get all settings",
        "id": "CAN_GET_SETTINGS",
      },
      Object {
        "deprecated": false,
        "description": "Allows to update settings",
        "id": "CAN_UPDATE_SETTINGS",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
